fix: List.of→Arrays.asList for JDK8 compat